# src/controllers/admin.controller.js
@@ -1,6 +1,17 @@
 const { CONSTANT_MSG } = require('../config/constant_messages');
 const { adminService } = require('../services');
-const { addHouse, updateHouse, deleteHouseById, getAllHouse, getHouseById } = require('../validator/validation');
+const { approveByAdmin, updateHouse, deleteHouseById, getAllHouse, getHouseById } = require('../validator/validation');
+
+exports.approveByAdmin = async (req, res) => {
+    try {
+        await approveByAdmin.validateAsync(req.body);
+        const approve = await adminService.approveByAdmin(req.body);
+        return res.status(approve.statusCode).send(approve);
+    } catch (error) {
+        console.log("Error in approveByAdmin API: ", error);
+        return res.status(500).send({ statusCode: 500, status: CONSTANT_MSG.STATUS.ERROR, message: error.message });
+    }
+};
 
 exports.getOwnerNameList = async (req, res) => {
     try {
@@ -24,8 +35,8 @@ exports.getOwnerList = async (req, res) => {
 
 exports.getTenantList = async (req, res) => {
     try {
-        const ownerList = await adminService.getTenantList(req.body);
-        return res.status(ownerList.statusCode).send(ownerList);
+        const tenantList = await adminService.getTenantList(req.body);
+        return res.status(tenantList.statusCode).send(tenantList);
     } catch (error) {
         console.log("Error in getTenantList API: ", error);
         return res.status(500).send({ statusCode: 500, status: CONSTANT_MSG.STATUS.ERROR, message: error.message });
@@ -34,8 +45,8 @@ exports.getTenantList = async (req, res) => {
 
 exports.getTenantBookedList = async (req, res) => {
     try {
-        const ownerList = await adminService.getTenantBookedList(req.body);
-        return res.status(ownerList.statusCode).send(ownerList);
+        const tenantList = await adminService.getTenantBookedList(req.body);
+        return res.status(tenantList.statusCode).send(tenantList);
     } catch (error) {
         console.log("Error in getTenantList API: ", error);
         return res.status(500).send({ statusCode: 500, status: CONSTANT_MSG.STATUS.ERROR, message: error.message });
